# sapphirepp

./: .clang-tidy  .clang_format  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  VERSION  config.h  fluid.cpp  install_dealii.sh  parameter-template.json  parameter-template.prm  physical-setup.h  plot_radiation_reaction_without_rotation.py  pure_advection_system.cpp  sapphire.cpp  sapphirepp.cpp  step-67.cpp  test-mhd.cpp  vfp-equation-solver.cpp  vfp-equation.prm
examples/: .gitignore  CMakeLists.txt  config.h  example.cpp
examples/closure/: CMakeLists.txt  closure.cpp  config.h  heatmap.gp  parameter.prm
examples/convergence-study/: CMakeLists.txt  config.h  convergence-study.cpp  parameter.prm
examples/gyro-advection/: CMakeLists.txt  config.h  gyro-advection.cpp  parameter.prm
examples/gyro-motion-f0/: CMakeLists.txt  config.h  gyro-motion-f0.cpp  parameter.prm
examples/gyro_radius/: CMakeLists.txt  config.h  gyro_radius.cpp  parameter.prm
examples/gyro_radius/tests/: CMakeLists.txt  mpi_performance.csv
examples/mhd/: CMakeLists.txt
examples/mhd/athena-linear-waves/: CMakeLists.txt  athena-linear-waves.cpp  config.h  parameter.prm
examples/mhd/blast-wave/: CMakeLists.txt  blast-wave.cpp  config.h  parameter.prm
examples/mhd/linear-hydro-waves/: CMakeLists.txt  config.h  linear-hydro-waves.cpp  parameter.prm
examples/mhd/linear-waves/: CMakeLists.txt  config.h  linear-waves.cpp  parameter.prm
examples/mhd/orszag-tang/: CMakeLists.txt  config.h  orszag-tang.cpp  parameter.prm
examples/mhd/shock-tube/: CMakeLists.txt  config.h  parameter.prm  shock-tube.cpp
examples/mhd/shock-tube-2d/: CMakeLists.txt  config.h  parameter.prm
examples/oblique_shock/: CMakeLists.txt  config.h  oblique_shock.cpp  parameter.prm
examples/parallel-shock/: CMakeLists.txt  config.h  parallel-shock.cpp  parameter.prm
examples/scattering/: CMakeLists.txt  README.md  config.h  introduction.md  parameter.prm  results.md  scattering.cpp
examples/scattering-only/: CMakeLists.txt  config.h  parameter.prm  scattering-only.cpp
examples/scattering/doc/: results.md
examples/steady-state-parallel-shock/: CMakeLists.txt  steady-state-parallel-shock.cpp
examples/vfp/: CMakeLists.txt
examples/vfp/boundary-conditions/: CMakeLists.txt
examples/vfp/closure/: CMakeLists.txt  closure.cpp  config.h  parameter.prm
examples/vfp/convergence-study/: CMakeLists.txt  config.h  convergence-study.cpp  parameter.prm
examples/vfp/gyro-advection/: CMakeLists.txt  config.h  gyro-advection.cpp  parameter.prm
examples/vfp/magnetic-mirroring/: config.h
examples/vfp/non-homogeneous-bc/: CMakeLists.txt  config.h  non-homogeneous-bc.cpp  parameter.prm
examples/vfp/parallel-shock/: CMakeLists.txt  config.h  parallel-shock.cpp  parameter.prm  plot_parallel_shock.py  pvplot.py
examples/vfp/radiation-reaction/: CMakeLists.txt  config.h  parameter.prm  plot_radiation_reaction.py  plot_radiation_reaction_different_reference_quantities.py  plot_radiation_reaction_rotation.py  plot_radiation_reaction_source.py  radiation-reaction.cpp
examples/vfp/reflective-bc/: CMakeLists.txt  config.h  parameter.prm
examples/vfp/scattering-only/: CMakeLists.txt  config.h  parameter.prm  scattering-only.cpp
examples/vfp/steady-state-oblique-shock/: CMakeLists.txt  config.h  parameter.prm  plot.py  plot_steady_state_oblique_shock.py  steady-state-oblique-shock.cpp
examples/vfp/steady-state-parallel-shock/: CMakeLists.txt  config.h  parameter.prm  plot_steady_state_parallel_shock.py  plot_steady_state_parallel_shock_scaled.py  pvplot.py  steady-state-parallel-shock.cpp
examples/vfp/steady-state-parallel-shock-with-synchrotron-losses/: CMakeLists.txt  config.h  parameter.prm  steady-state-parallel-shock-with-synchrotron-losses.cpp
examples/vfp/synchrotron-radiation/: CMakeLists.txt  config.h  parameter.prm  plot_synchrotron_radiation.py  synchrotron-radiation.cpp
src/mhd/: CMakeLists.txt  mhd-equations.cpp  mhd-parameters.cpp  mhd-postprocessor.cpp  mhd-solver.cpp  numerical-flux.cpp  slope-limiter.cpp
src/utils/: CMakeLists.txt  grid-data-function.cpp  output-module.cpp  output-parameters.cpp  output_module.cpp  parameter-parser.cpp  parameter_parser.cpp  sapphire-logstream.cpp  sapphirepp-logstream.cpp  tools.cpp
src/vfp/: CMakeLists.txt  numerical-flux.cpp  particle-functions.cpp  pde-system.cpp  phase-space-reconstruction.cpp  physical-setup.cpp  probe-location.cpp  reference-values.cpp  upwind-flux.cpp  vfp-equation-solver.cpp  vfp-parameters.cpp  vfp-solver-control.cpp  vfp-solver.cpp
tests/: .gitignore  CMakeLists.txt
tests/convergence-study/: CMakeLists.txt  test-convergence-study.cpp
tests/gyro/: CMakeLists.txt  mpi_performance.sh
tests/gyro-advection/: CMakeLists.txt  parameter-static.prm  test-gyro-advection.cpp
tests/gyro-motion-f0/: CMakeLists.txt  parameter.prm  test-gyro-motion-f0.cpp
tests/mhd/: CMakeLists.txt  test-mhd-equations.cpp  test-run-mhd.h
tests/mhd/athena-linear-waves/: CMakeLists.txt  parameter-1d-alfven.prm  parameter-1d-entropy.prm  parameter-1d-fast.prm  parameter-1d-slow.prm  parameter-1d-sound.prm  parameter-2d-alfven.prm  parameter-2d-sound.prm  parameter-3d-alfven.prm  parameter-3d-sound.prm  parameter.prm  test-athena-linear-waves-1d.cpp  test-athena-linear-waves-2d.cpp  test-athena-linear-waves-3d.cpp
tests/mhd/linear-waves/: CMakeLists.txt  parameter-1d-alfven.prm  parameter-1d-entropy.prm  parameter-1d-fast.prm  parameter-1d-slow.prm  parameter-1d-sound.prm  (+7 more)
tests/parallel-shock/: CMakeLists.txt  parameter.prm  test-parallel-shock.cpp
tests/scattering/: CMakeLists.txt  parameter-1d-ERK4.prm  parameter-1d-FE.prm  parameter.prm  scattering_test.cpp
tests/scattering-only/: CMakeLists.txt  parameter-1d-BE.prm  parameter-1d-CN.prm  parameter-1d-ERK4.prm  parameter-1d-FE.prm  parameter-1d-LSERK.prm  parameter-2d-ERK4.prm  parameter-3d-ERK4.prm  test-scattering-only-1d.cpp  test-scattering-only-2d.cpp  test-scattering-only-3d.cpp
tests/vfp/: CMakeLists.txt  test-run-vfp.h
(+237 files in other folders)
