add_subdirectory(parallel-shock)
add_subdirectory(steady-state-parallel-shock)
add_subdirectory(steady-state-oblique-shock)
add_subdirectory(gyro-advection)
add_subdirectory(scattering-only)
add_subdirectory(convergence-study)
add_subdirectory(synchrotron-radiation)
add_subdirectory(closure)
add_subdirectory(boundary-conditions)
